2011-07-21  Till Straumann <strauman@slac.stanford.edu>

	* shared/motorola/motorola.c: removed
	PCI_FIXUP_OPT_OVERRIDE_NAME for qemu - qemu gets it
	right and this option messes things rather up.

2011-07-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1799/bsps
	* acinclude.m4: Update for qoriq BSPs.
	* shared/include/linker-symbols.h: New file.

2011-07-21	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/clock/clock.c: Fix to clear the first pending decrementer
	exception.

2011-07-20	Till Straumann <strauman@slac.stanford.edu>

	PR 1837/bsps
	* shared/motorola/motorola.c, shared/motorola/motorola.h: Add MVME2400
	board with 750 CPU to list of supported Motorola boards.

2011-07-18  Till Straumann <strauman@slac.stanford.edu>

	* shared/bootloader/qemu_fakerom.S: Added work-around for
	qemu bug 811683.

2011-07-18  Till Straumann <strauman@slac.stanford.edu>

	* shared/bootloader/head.S: disable USE_PPCBUG under qemu.

2011-07-18  Till Straumann <strauman@slac.stanford.edu>

	* shared/startup/bspstart.c: Select console *before* doing
	any potential printk() (e.g., panic).

2011-07-18  Till Straumann <strauman@slac.stanford.edu>

	* shared/startup/ppc_idle.c: Need to enable HID0[NAP] on
	a 7400/7455/7457 for MSR[POW] to have an effect.

2011-07-15  Till Straumann <strauman@slac.stanford.edu>

	* shared/bootloader/mm.c, shared/bootloader/pci.c,
	shared/bootloader/qemu_fakeres.c, shared/bootloader/qemu_fakerom.S,
	shared/irq/irq.h, shared/motorola/motorola.c, shared/residual/residual.h,
	shared/startup/bspstart.c,
	Added 'qemuprep' BSP variant.

2011-07-15  Till Straumann <strauman@slac.stanford.edu>

	* shared/bootloader/misc.c: Copy residual data 
	_before_ decompressing the kernel since the firmware
	may have stored it in an area that is overwritten
	by decompress_kernel().

2011-07-15  Till Straumann <strauman@slac.stanford.edu>

	* shared/startup/ppc_idle.c: added an 'idle task' body